# gear

./: .gitignore  CMakeLists.txt  LICENSE  README  config.xml  resources.xml  server.cfg  test.txt
doc/: project.dia  (+3 more)
src/: .gitignore  Application.cpp  CMakeCache.txt  CMakeLists.txt  Debug.cpp  Debug.h  GUIPrototype.cpp  Game.cpp  Game.h  Makefile  Message.cpp  Message.h  Player.cpp  Player.h  Properties.cpp  Properties.h  Server.cpp  Server.h  ServerApplication.cpp  ServerApplication.h  ServerConfiguration.cpp  ServerConfiguration.h  cmake_install.cmake  common.h  game  gui  server
src/clanlib/core/: io.h  math.h  resources.h  signals.h  system.h  text.h  xml.h
src/clanlib/display/: 2d.h  collision.h  common.h  font.h  render.h  window.h
src/clanlib/network/: netgame.h
src/common/: Collections.cpp  Collections.h  Game.cpp  Game.h  GroundBlockType.h  Limits.h  LoopVector.h  Player.cpp  Player.h  Properties.cpp  Properties.h  RemotePlayer.cpp  RemotePlayer.h  Token.cpp  Token.h  Units.h  gassert.h  loglevels.h  types.h  votetypes.h  workarounds.h
src/common/utils/: rtti.h
src/controllers/: AuthorsController.cpp  AuthorsController.h  ConnectController.cpp  ConnectController.h  EditorController.cpp  EditorController.h  EditorMenuController.cpp  EditorMenuController.h  GameMenuController.cpp  GameMenuController.h  LoadingController.cpp  LoadingController.h  MainMenuController.cpp  MainMenuController.h  OptionController.cc  OptionController.cpp  OptionsController.cpp  OptionsController.h  PlayOnlineSceneController.cpp  PlayOnlineSceneController.h
src/debug/: RaceSceneKeyBindings.cpp  RaceSceneKeyBindings.h
src/editor/: EditorBase.cpp  EditorBase.h  EditorHelper.cpp  EditorHelper.h  EditorLogic.cpp  EditorLogic.h  EditorManagement.cpp  EditorManagement.h  EditorMenu.cpp  EditorMenu.h  EditorPoint.cpp  EditorPoint.h  EditorTrack.cpp  EditorTrack.h
src/gfx/: Animation.h  DebugLayer.cpp  DebugLayer.h  DirectScene.cpp  DirectScene.h  Drawable.h  GameWindow.cpp  GameWindow.h  GuiScene.cpp  GuiScene.h  MessageBox.cpp  MessageBox.h  Overlay.cpp  Overlay.h  Scene.cpp  Scene.h  Stage.cpp  Stage.h  Viewport.cpp  Viewport.h
src/gfx/race/: RaceGraphics.cpp  RaceGraphics.h
src/gfx/scenes/: AuthorsScene.cpp  AuthorsScene.h  ConnectScene.cpp  ConnectScene.h  EditorScene.cpp  EditorScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  OptionScene.cc  OptionScene.cpp  OptionScene.h  OptionsScene.cpp  OptionsScene.h  PlayOnlineScene.cpp  PlayOnlineScene.h  RaceScene.cpp  RaceScene.h  Scene.h  SceneContainer.cpp  SceneContainer.h
src/gfx/shaders/: MotionBlurShader.cpp  MotionBlurShader.h  Shader.cpp  Shader.h
src/gfx/widgets/: Header.cpp  Header.h
src/graphics/: Animation.h  Bound.cpp  Bound.h  Car.cpp  Car.h  DebugLayer.cpp  DebugLayer.h  DecorationSprite.h  Drawable.h  GameWindow.cpp  GameWindow.h  GroundBlock.cpp  GroundBlock.h  RaceUI.cpp  RaceUI.h  Scene.h  Smoke.cpp  Smoke.h  SpeedMeter.cpp  SpeedMeter.h  Stage.cpp  Stage.h  TireTrack.cpp  TireTrack.h  Viewport.cpp  Viewport.h
src/gui/: LoadingScene.cpp  LoadingScene.h  MainMenu.cpp  MainMenu.h  MainMenuScene.cpp  MainMenuScene.h  SceneContainer.cpp  SceneContainer.h
src/logic/: VoteSystem.cpp  VoteSystem.h
src/logic/race/: ArcadeRaceLogic.cpp  ArcadeRaceLogic.h  BasicGameClient.cpp  BasicGameClient.h  Car.cpp  Car.h  GameLogic.cpp  GameLogic.h  GameLogicArcade.cpp  GameLogicArcade.h  GameLogicArcadeOnline.cpp  GameLogicArcadeOnline.h  GameLogicTimeTrail.cpp  GameLogicTimeTrail.h  GameLogicTimeTrailOnline.cpp  GameLogicTimeTrailOnline.h  Level.cpp  Level.h  MessageBoard.cpp  MessageBoard.h  OfflineRaceLogic.cpp  OfflineRaceLogic.h  OnlineRaceLogic.cpp  OnlineRaceLogic.h  Progress.cpp  Progress.h  Race.cpp  Race.h  RaceLogic.cpp  RaceLogic.h  Sandpit.cpp  ScoreTable.cpp  ScoreTable.h  TimeTrailRaceLogic.cpp  TimeTrailRaceLogic.h  Track.cpp  Track.h  TyreStripes.cpp  TyreStripes.h
src/math/: Easing.cpp  Easing.h  Float.cpp  Float.h  Integer.cpp  Integer.h  Time.cpp  Time.h
src/network/: CarState.cpp  CarState.h  Client.cpp  Client.h  ClientInfo.cpp  ClientInfo.h  Events.h  GameState.cpp  GameState.h  Goodbye.cpp  Goodbye.h  Packet.h  PlayerInfo.cpp  PlayerInfo.h  PlayerJoined.cpp  PlayerJoined.h  ProtocolVersion.h  RaceClient.cpp  RaceClient.h  RaceServer.cpp  RaceServer.h  RemoteCar.cpp  RemoteCar.h  Server.cpp  Server.h  events.h  version.h
src/network/client/: Client.cpp  Client.h  RankingClient.cpp  RankingClient.h
src/network/masterserver/: MasterServer.cpp  MasterServer.h
src/network/packets/: CarState.cpp  CarState.h  ClientInfo.h  GameMode.cpp  GameMode.h  GameState.cpp  GameState.h  Goodbye.cpp  Goodbye.h  Packet.h  PlayerJoined.cpp  PlayerJoined.h  PlayerLeaved.cpp  PlayerLeaved.h  PlayerLeft.cpp  PlayerLeft.h  RaceStart.cpp  RaceStart.h  RankingAdvance.cpp  RankingAdvance.h  RankingEntries.cpp  RankingEntries.h  RankingFind.cpp  RankingFind.h  RankingRequest.cpp  RankingRequest.h  ServerInfoRequest.cpp  ServerInfoRequest.h  ServerInfoResponse.cpp  ServerInfoResponse.h  VoteEnd.cpp  VoteEnd.h  VoteStart.cpp  VoteStart.h  VoteTick.cpp  VoteTick.h
src/network/queries/: Query.cpp  Query.h  RankingBrowseQuery.cpp  RankingBrowseQuery.h  RankingFindQuery.cpp  RankingFindQuery.h
src/network/server/: MasterServerRegistrant.cpp  MasterServerRegistrant.h  RankingServer.cpp  RankingServer.h  RankingService.cpp  RankingService.h  Server.cpp  Server.h  TimeTrailServer.cpp  TimeTrailServer.h  VoteSystem.cpp  VoteSystem.h
src/race/: Block.cpp  Block.h  Bound.cpp  Bound.h  Car.cpp  Car.h  Checkpoint.cpp  Checkpoint.h  Level.cpp  Level.h  Player.cpp  Player.h  Race.cpp  Race.h  RacePlayer.cpp  RacePlayer.h  RaceScene.cpp  RaceScene.h  RaceUI.cpp  RaceUI.h  ScoreTable.cpp  ScoreTable.h  Track.cpp  Track.h  TyreStripes.cpp  TyreStripes.h  Viewport.cpp  Viewport.h
src/ranking/: LocalRanking.cpp  LocalRanking.h  RankingEntry.h
src/tests/: suite.cpp
src/tests/common/: WorkaroundsTest.cpp
src/tests/math/: FloatTest.cpp  IntegerTest.cpp
src/tests/ranking/: LocalRankingTest.cpp
(+81 files in other folders)
